# abouncingsealbot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  bot  bounce.cpp  bounce.h  build.sh  commands.cpp  configs.hpp  data.json  data.txt  eval.cpp  eval.h  handler.cpp  handler.h  info.cpp  info.h  main.cpp  privacy.md  readme.md  terms.md  update_libs.sh  versions.hpp
.cache/clangd/index/: appcommand.cpp.27A29005FA456A95.idx  appcommand.h.68669B5D90314758.idx  application.cpp.AAF1F19035580D11.idx  application.h.3E4A0B2293F97093.idx  auditlog.cpp.788D93E23A9EF13A.idx  auditlog.h.2F5A360AC816D296.idx  automod.cpp.057FBA880631DE78.idx  automod.cpp.5DE7D7C3FB626207.idx  automod.h.320AE9B51FC64A02.idx  automod_rule_create.cpp.44C4F5486FD4C25D.idx  automod_rule_delete.cpp.EB67F8BACE9ACA67.idx  automod_rule_execute.cpp.7713C70966271092.idx  automod_rule_update.cpp.07B44284626494EA.idx  ban.cpp.6EA038AA9EEBA2FC.idx  ban.h.67021377D9B51125.idx  cache.cpp.B49F0145480847BB.idx  cache.h.2CDDE193780F4DC2.idx  (+167 more)
cmds/: bounce.hpp  eval.hpp  guild-conf.hpp  guild-opt.hpp  info.hpp  leveling.hpp  ping.hpp  user-conf.hpp  user-opt.hpp
configs/: placeholder.txt
src/: build.sh  commandhandler.cpp  commandhandler.hpp  commands.cpp  configs.cpp  configs.hpp  main.cpp  utils.cpp  utils.hpp  versions.cpp  versions.hpp
src/cmds/: bounce.cpp  bounce.hpp  guild-conf.cpp  guild-conf.hpp  info.cpp  info.hpp  leveling.cpp  leveling.hpp  ping.cpp  ping.hpp  user-conf.cpp  user-conf.hpp
src/commands/: bounce.cpp  bounce.h  chess.cpp  chess.h  info.cpp  info.h  ping.cpp  ping.h
